哈哈哈,测试一下

--- a/calc.html
+++ b/calc.html
@@ -25,5 +25,6 @@
     <script src="js/jQuery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/calc.js"></script>
+  <p>版权信息:这里是我bobo和咪咪共同研发.请勿抄袭!</p>
   </body>
 </html>
