我添加了,"牛逼",测试一下用户名.

--- a/calc.html
+++ b/calc.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>计算器 By:Cat73 QQ:1901803382</title>
+    <title>牛逼计算器 By:Cat73 QQ:1901803382</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/calc.css" rel="stylesheet">
   </head>
